--- a/Profile.html
+++ b/Profile.html
@@ -6,11 +6,12 @@
 -->
 <html>
 	<head>
-		<title>Generic - Phantom by HTML5 UP</title>
+		<title>Nuttapat_Profile</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="assets/css/bg.css">
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
@@ -22,7 +23,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/Dvy9T5.svg" alt="" /></span><span class="title">Nutto</span>
+									<span class="symbol"><img src="images/Dvy9T5.svg" alt="" /></span><span class="title">Home</span>
 								</a>
 
 							<!-- Nav -->
@@ -51,22 +52,21 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Profile</h1>
-							<span class="image main"><img src="images/GG.jpg" alt="" /></span>
-							<p>ประวัติส่วนตัว
+							<center><img src="images/Nutto.jpg" alt="" width="25%" /></center>
+							<p>ประวัติส่วนตัว:
 								ชื่อ ณัฐพัทร นามสกุล ถี่ถ้วน
 								<br>
-								รหัสนักศึกษา 6506022610022
+								รหัสนักศึกษา: 6506022610022
 								<br>
 								วันเกิด 12 มกราคม พ.ศ. 2547
 								<br>
 								สัญชาติ/เชื้อชาติ:ไทย
-							<p>การศึกษา
-								จบการศึกษาระดับชั้นมัธยมศึกษามาจากโรงเรียนจุ๋งฮัวโซะเซียว แผนการเรียน วิทย์-คณิต
+							<p>การศึกษา:
+								จบการศึกษาระดับชั้นมัธยมศึกษาจาก <a href="https://home.rst.ac.th/home"> โรงเรียนรัตนโกสินทร์สมโภชบางขุนเทียน </a> แผนการเรียน คณิต-อังกฤษ 
 								<br>
-								กำลังศึกษาอยู่ คณะเทคโนโนโลยีและการจัดการอุตสาหกรรม(FITM)
+								<a href="http://www.fitm.kmutnb.ac.th/">คณะเทคโนโลยีและการจัดการอุตสาหกรรม</a>
 								<br>
-								มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าพระนครเหนือวิทยาเขตปราจีนบุรี</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+								<a href="https://www.kmutnb.ac.th/">มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าพระนครเหนือวิทยาเขตปราจีนบุรี</a>
 						</div>
 					</div>
 
