--- a/L01.html
+++ b/L01.html
@@ -1,1 +1,252 @@
-#
+<!DOCTYPE HTML>
+<!--
+	Phantom by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>L01</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="assets/css/bg.css">
+	</head>
+	<body class="is-preload">
+		<!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Header -->
+					<header id="header">
+						<div class="inner">
+
+							<!-- Logo -->
+								<a href="index.html" class="logo">
+									<span class="symbol"><img src="images/Dvy9T5.svg" alt="" /></span><span class="title">Home</span>
+								</a>
+
+							<!-- Nav -->
+								<nav>
+									<ul>
+										<li><a href="#menu">Menu</a></li>
+									</ul>
+								</nav>
+
+						</div>
+					</header>
+
+				<!-- Menu -->
+					<nav id="menu">
+						<h2>Menu</h2>
+						<ul>
+							<li><a href="index.html">Home</a></li>
+							<li><a href="Profile.html">Profile</a></li>
+							<li><a href="L00.html">Introduction</a></li>
+							<li><a href="L01.html">Lesson 1</a></li>
+							<li><a href="L02.html">Lesson 2</a></li>
+							<li><a href="L03.html">Lesson 3</a></li>
+							<li><a href="L04.html">Lesson 4</a></li>
+							<li><a href="L05.html">Lesson 5</a></li>
+							<li><a href="L06.html">Lesson 6</a></li>
+							<li><a href="L07.html">Lesson 7</a></li>
+							<li><a href="L08.html">Lesson 8</a></li>
+							<li><a href="L09.html">Lesson 9</a></li>
+						</ul>
+					</nav>
+                    <br>
+                    <br>
+                    <center><h1>FlowChart คืออะไร</h1></center>
+                    <br>
+                    <center>Flow Chart หรือ ผังงาน หมายถึงแผนภาพแสดงลำดับการเคลื่อนไหวหรือการกระทำของคนหรือสิ่งที่เกี่ยวข้องในระบบต่างๆ ข้อดีของ Flow Chart คือการแสดงภาพรวมและช่วยจัดลำดับขั้นตอนการทำงานในระบบได้อย่างเป็นระเบียบและถูกต้อง เพื่อเพิ่มประสิทธิภาพในการทํางาน</center>
+                    <br>
+                    <center><img src="images/Flowchart.png" alt="" width="40%" /></center>
+                    <br>
+                    <br>
+                    <center><h1>ตัวอย่าง Flowchart ใน vs code</h1></center>
+                    <center><img src="images/Flowc.png" alt="" width="40%" /></center>
+                    <br>
+                    <br>
+                    <center><h1>สัญลักษณ์ flowchart</h1></center>
+                    <center><img src="images/Flowsymbols.png" alt="" width="40%" /></center> 
+                    <br>
+                    <br>
+                    <center><h1>Input Process Output   </h1></center>   
+                    <br>
+                    <br>
+                    <center><img src="images/Ipo.png" alt="" width="40%" /></center>
+                    <center><img src="images/Input process.png" alt="" width="40%" /></center>
+                    <br>
+                    <br>
+                    <center><h1>Variables</h1></center> 
+                    <center><img src="images/Var.png" alt="" width="40%" /></center>
+                    <center><img src="images/Var2.png" alt="" width="40%" /></center>
+                    <center><img src="images/Var3.png" alt="" width="40%" /></center>
+                    <br>
+                    <br>
+                    <center><h1>Data Type</h1></center> 
+                    <center><img src="images/Data_t.png" alt="" width="40%" /></center>
+                    <center><img src="images/N integer.png" alt="" width="40%" /></center>
+                    <br>
+                    <br>
+                    <center><h1>Number</h1></center> 
+                    <center><img src="images/Number.png" alt="" width="40%" /></center>
+                    <center><img src="images/Num2.png" alt="" width="40%" /></center>
+                    <br>
+                    <br>
+                    <center><h1>Boolean</h1></center> 
+                    <center><img src="images/Boolean.png" alt="" width="40%" /></center>
+                    <center><img src="images/Boolean2.png" alt="" width="40%" /></center>
+                    <br>
+                    <br>
+                    <center><h1>String</h1></center> 
+                    <center><img src="images/String.png" alt="" width="40%" /></center>
+                    <center><img src="images/String 2.png" alt="" width="40%" /></center>
+                    <br>
+                    <br>
+                    <center><h1>Operations</h1></center> 
+                    <center><img src="images/operatiors.png" alt="" width="40%" /></center>
+                    <center><img src="images/operators 2.png" alt="" width="40%" /></center>
+                    <br>
+                    <br>
+                    <center><h1>Input</h1></center> 
+                    <center><img src="images/Input god.png" alt="" width="40%" /></center>
+                    <center><img src="images/Input god 2.png" alt="" width="40%" /></center>
+                    <br>
+                    <br>
+                    <center><h1>#Comment</h1></center> 
+                    <center><img src="images/comments.png" alt="" width="40%" /></center>
+                    <center><img src="images/Comment 2.png" alt="" width="40%" /></center>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        				<!-- Footer -->
+				<footer id="footer">
+					<div class="inner">
+						<section>
+							<h2>ติดต่อ</h2>
+							<form method="post" action="#">
+								<div class="fields">
+									<div class="field half">
+										<input type="text" name="name" id="name" placeholder="Name" />
+									</div>
+									<div class="field half">
+										<input type="email" name="email" id="email" placeholder="Email" />
+									</div>
+									<div class="field">
+										<textarea name="message" id="message" placeholder="Message"></textarea>
+									</div>
+								</div>
+								<ul class="actions">
+									<li><input type="submit" value="Send" class="primary" /></li>
+								</ul>
+							</form>
+						</section>
+						<section>
+							<h2>ติดตาม</h2>
+							<ul class="icons">
+								<li><a href="https://www.facebook.com/nutto.teetaun.5" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.instagram.com/nuttoteetaun/" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://github.com/Nutto456" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>																	
+							</ul>
+						</section>
+						<ul class="copyright">
+							<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						</ul>
+					</div>
+				</footer>
+
+		</div>
+
+	<!-- Scripts -->
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/browser.min.js"></script>
+		<script src="assets/js/breakpoints.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
+
+</body>
+</html>            
