--- a/index.html
+++ b/index.html
@@ -41,10 +41,17 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Profile</a></li>
-							<li><a href="generic.html">Grades</a></li>
-							<li><a href="generic.html">Lesson 1</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="Profile.html">Profile</a></li>
+							<li><a href="L00.html">Introduction</a></li>
+							<li><a href="L01.html">Lesson 1</a></li>
+							<li><a href="L02.html">Lesson 2</a></li>
+							<li><a href="L03.html">Lesson 3</a></li>
+							<li><a href="L04.html">Lesson 4</a></li>
+							<li><a href="L05.html">Lesson 5</a></li>
+							<li><a href="L06.html">Lesson 6</a></li>
+							<li><a href="L07.html">Lesson 7</a></li>
+							<li><a href="L08.html">Lesson 8</a></li>
+							<li><a href="L09.html">Lesson 9</a></li>
 						</ul>
 					</nav>
 
@@ -95,7 +102,7 @@
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="L02.html">
 										<h2>Lesson 2</h2>
 										<div class="content">
 											<p>Selection If-elif-else.</p>
@@ -106,7 +113,7 @@
 									<span class="image">
 										<img src="images/pic06.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="L03.html">
 										<h2>Lesson 3</h2>
 										<div class="content">
 											<p>Repetition While For.</p>
@@ -117,7 +124,7 @@
 									<span class="image">
 										<img src="images/pic07.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="L04.html">
 										<h2>Lesson 4</h2>
 										<div class="content">
 											<p>String.</p>
@@ -128,7 +135,7 @@
 									<span class="image">
 										<img src="images/pic08.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="L05.html">
 										<h2>Lesson 5</h2>
 										<div class="content">
 											<p>Functions.</p>
@@ -139,7 +146,7 @@
 									<span class="image">
 										<img src="images/pic09.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="L06.html">
 										<h2>Lesson 6</h2>
 										<div class="content">
 											<p>Files and exceptions.</p>
@@ -150,7 +157,7 @@
 									<span class="image">
 										<img src="images/pic10.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="L07.html">
 										<h2>Lesson 7</h2>
 										<div class="content">
 											<p>Lists and Tuples.</p>
@@ -161,7 +168,7 @@
 									<span class="image">
 										<img src="images/pic11.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="L08.html">
 										<h2>Lesson 8</h2>
 										<div class="content">
 											<p>Dictionary and set.</p>
@@ -172,7 +179,7 @@
 									<span class="image">
 										<img src="images/pic12.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="L09.html">
 										<h2>Lesson 9</h2>
 										<div class="content">
 											<p>Lists and Tuples.</p>
@@ -196,7 +203,7 @@
 					<footer id="footer">
 						<div class="inner">
 							<section>
-								<h2>Get in touch</h2>
+								<h2>ติดต่อ</h2>
 								<form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
@@ -215,18 +222,11 @@
 								</form>
 							</section>
 							<section>
-								<h2>Follow</h2>
+								<h2>ติดตาม</h2>
 								<ul class="icons">
-									<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-500px"><span class="label">500px</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
-									
-									
+									<li><a href="https://www.facebook.com/nutto.teetaun.5" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<li><a href="https://www.instagram.com/nuttoteetaun/" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://github.com/Nutto456" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>																	
 								</ul>
 							</section>
 							<ul class="copyright">
