--- a/L02.html
+++ b/L02.html
@@ -55,6 +55,43 @@
 						</ul>
 					</nav>
 
+                    <br>
+                    <br>
+                    <center><h1>Draw io คืออะไร</h1></center>
+                    <br>
+                    <center>Draw.io เป็นเว็บไซด์หรือ URL ที่สามารถใช้งานโดยไม่ต้องติดตั้งโปรแกรม และยังสามารถที่จะเก็บข้อมูลบน Cloud ได้ทำให้สามารถใช้ งานได้ทุกที่ที่มีอินเทอร์เน็ตไม่ต้องกังวลกับสื่อที่ใช้เก็บข้อมูล <br> Draw.io สามารถใช้งานได้โดยไม่มีค่าใช้จ่ายในระดับบุคคล แต่หากเป็นองค์กรขนาด ใหญ่จะมีการเรียกเก็บค่าใช้จ่าย การเริ่มต้นใช้งาน</center>
+                    <br>
+                    <center><img src="images/Draw1.png" alt="" width="40%" /></center>
+                    <br>
+                    <br>
+                    <center><h1>ตัวอย่าง Flowchart ใน vs code</h1></center>
+                    <center><img src="images/Draw2.png" alt="" width="40%" /></center>
+                    <br>
+                    <br>
+                    <center><h1>Decision Structure</h1></center>
+                    <center><img src="images/Draw3.png" alt="" width="40%" /></center> 
+                    <br>
+                    <br>   
+                    <center><img src="images/Draw4.png" alt="" width="40%" /></center>
+                    <center><img src="images/Draw5.png" alt="" width="40%" /></center>
+                    <br>
+                    <br>
+                    <center><h1>Decision Structure if else</h1></center>
+                    <center><img src="images/Draw7.png" alt="" width="40%" /></center>
+                    <center><img src="images/Draw8.png" alt="" width="40%" /></center>
+                    <center><img src="images/Draw9.png" alt="" width="40%" /></center>
+                    <center><img src="images/Draw10.png" alt="" width="40%" /></center>
+                    <center><img src="images/Draw11.png" alt="" width="40%" /></center>
+                    <br>
+                    <br>
+                    <center><h1>Decision Structure else</h1></center>
+                    <center><img src="images/Draw12.png" alt="" width="40%" /></center>
+                    <center><img src="images/Draw13.png" alt="" width="40%" /></center>
+                    <center><img src="images/draw14.png" alt="" width="40%" /></center>
+                    <center><img src="images/Draw15.png" alt="" width="40%" /></center>
+                    <center><img src="images/Draw16.png" alt="" width="40%" /></center>
+                    <center><img src="images/Draw17.png" alt="" width="40%" /></center>
+
 
 
 
