--- a/L03.html
+++ b/L03.html
@@ -55,7 +55,51 @@
 						</ul>
 					</nav>
 
-
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <center><h1>REPETITION STRUCTURES</h1></center>
+                    <center><img src="images/Re1.png" alt="" width="40%"></center>
+                    <center><img src="images/Re2.png" alt="" width="40%"></center>
+                    <center><img src="images/Re3.png" alt="" width="40%"></center>
+                    <br>
+                    <br>
+                    <center><h1>CONDITION-CONTROLLEDLOOP</h1></center>
+                    <center><img src="images/Re4.png" alt="" width="40%"></center>
+                    <center><img src="images/Re5.png" alt="" width="40%"></center>
+                    <center><img src="images/Re6.png" alt="" width="40%"></center>
+                    <center><img src="images/Re7.png" alt="" width="40%"></center>
+                    <center><img src="images/Re8.png" alt="" width="40%"></center>
+                    <center><img src="images/Re9.png" alt="" width="40%"></center>
+                    <center><img src="images/Re11.png" alt="" width="40%"></center>
+                    <center><img src="images/Re12.png" alt="" width="40%"></center>
+					<center><h1>CONDITION-CONTROLLEDLOOP For</h1></center>
+                    <center><img src="images/Re13.png" alt="" width="40%"></center>
+                    <center><img src="images/Re14.png" alt="" width="40%"></center>
+                    <center><img src="images/Re15.png" alt="" width="40%"></center>
+                    <center><img src="images/Re16.png" alt="" width="40%"></center>
+                    <center><img src="images/Re17.png" alt="" width="40%"></center>
+                    <center><img src="images/Re18.png" alt="" width="40%"></center>
+                    <center><img src="images/Re19.png" alt="" width="40%"></center>
+                    <center><img src="images/Re21.png" alt="" width="40%"></center>
+                    <center><img src="images/Re22.png" alt="" width="40%"></center>
+					<center><h1>CALCULATING RUNNING TOTAL</h1></center>
+                    <center><img src="images/Re23.png" alt="" width="40%"></center>
+                    <center><img src="images/Re24.png" alt="" width="40%"></center>
+                    <center><img src="images/Re25.png" alt="" width="40%"></center>
+                    <center><img src="images/Re26.png" alt="" width="40%"></center>
+                    <center><img src="images/Re27.png" alt="" width="40%"></center>
+                    <center><img src="images/Re28.png" alt="" width="40%"></center>
+					<center><h1>INPUT VALIDATION LOOPS</h1></center>
+                    <center><img src="images/Re29.png" alt="" width="40%"></center>
+                    <center><img src="images/Re31.png" alt="" width="40%"></center>
+                    <center><img src="images/Re32.png" alt="" width="40%"></center>
+					<center><h1>PASS, CONTINUE, BREAK</h1></center>
+                    <center><img src="images/Re33.png" alt="" width="40%"></center>
+                    <center><img src="images/Re34.png" alt="" width="40%"></center>
+                    <center><img src="images/Re35.png" alt="" width="40%"></center>
+                    <center><img src="images/Re36.png" alt="" width="40%"></center>
 
 
 
