--- a/L01.html
+++ b/L01.html
@@ -60,7 +60,7 @@
                     <br>
                     <center>Flow Chart หรือ ผังงาน หมายถึงแผนภาพแสดงลำดับการเคลื่อนไหวหรือการกระทำของคนหรือสิ่งที่เกี่ยวข้องในระบบต่างๆ ข้อดีของ Flow Chart คือการแสดงภาพรวมและช่วยจัดลำดับขั้นตอนการทำงานในระบบได้อย่างเป็นระเบียบและถูกต้อง เพื่อเพิ่มประสิทธิภาพในการทํางาน</center>
                     <br>
-                    <center><img src="images/Flowchart.png" alt="" width="40%" /></center>
+                    <center><img src="images/Flowchart.png" alt="" /></center>
                     <br>
                     <br>
                     <center><h1>ตัวอย่าง Flowchart ใน vs code</h1></center>
