--- a/L01.html
+++ b/L01.html
@@ -64,59 +64,59 @@
                     <br>
                     <br>
                     <center><h1>ตัวอย่าง Flowchart ใน vs code</h1></center>
-                    <center><img src="images/Flowc.png" alt="" width="40%" /></center>
+                    <center><img src="images/Flowc.png" alt=""  /></center>
                     <br>
                     <br>
                     <center><h1>สัญลักษณ์ flowchart</h1></center>
-                    <center><img src="images/Flowsymbols.png" alt="" width="40%" /></center> 
+                    <center><img src="images/Flowsymbols.png" alt=""  /></center> 
                     <br>
                     <br>
                     <center><h1>Input Process Output   </h1></center>   
                     <br>
                     <br>
-                    <center><img src="images/Ipo.png" alt="" width="40%" /></center>
-                    <center><img src="images/Input process.png" alt="" width="40%" /></center>
+                    <center><img src="images/Ipo.png" alt=""  /></center>
+                    <center><img src="images/Input process.png" alt=""  /></center>
                     <br>
                     <br>
                     <center><h1>Variables</h1></center> 
-                    <center><img src="images/Var.png" alt="" width="40%" /></center>
-                    <center><img src="images/Var2.png" alt="" width="40%" /></center>
-                    <center><img src="images/Var3.png" alt="" width="40%" /></center>
+                    <center><img src="images/Var.png" alt=""  /></center>
+                    <center><img src="images/Var2.png" alt=""  /></center>
+                    <center><img src="images/Var3.png" alt=""  /></center>
                     <br>
                     <br>
                     <center><h1>Data Type</h1></center> 
-                    <center><img src="images/Data_t.png" alt="" width="40%" /></center>
-                    <center><img src="images/N integer.png" alt="" width="40%" /></center>
+                    <center><img src="images/Data_t.png" alt=""  /></center>
+                    <center><img src="images/N integer.png" alt=""  /></center>
                     <br>
                     <br>
                     <center><h1>Number</h1></center> 
-                    <center><img src="images/Number.png" alt="" width="40%" /></center>
-                    <center><img src="images/Num2.png" alt="" width="40%" /></center>
+                    <center><img src="images/Number.png" alt=""  /></center>
+                    <center><img src="images/Num2.png" alt="" /></center>
                     <br>
                     <br>
                     <center><h1>Boolean</h1></center> 
-                    <center><img src="images/Boolean.png" alt="" width="40%" /></center>
-                    <center><img src="images/Boolean2.png" alt="" width="40%" /></center>
+                    <center><img src="images/Boolean.png" alt=""  /></center>
+                    <center><img src="images/Boolean2.png" alt=""  /></center>
                     <br>
                     <br>
                     <center><h1>String</h1></center> 
-                    <center><img src="images/String.png" alt="" width="40%" /></center>
-                    <center><img src="images/String 2.png" alt="" width="40%" /></center>
+                    <center><img src="images/String.png" alt=""  /></center>
+                    <center><img src="images/String 2.png" alt=""  /></center>
                     <br>
                     <br>
                     <center><h1>Operations</h1></center> 
-                    <center><img src="images/operatiors.png" alt="" width="40%" /></center>
-                    <center><img src="images/operators 2.png" alt="" width="40%" /></center>
+                    <center><img src="images/operatiors.png" alt=""  /></center>
+                    <center><img src="images/operators 2.png" alt=""  /></center>
                     <br>
                     <br>
                     <center><h1>Input</h1></center> 
-                    <center><img src="images/Input god.png" alt="" width="40%" /></center>
-                    <center><img src="images/Input god 2.png" alt="" width="40%" /></center>
+                    <center><img src="images/Input god.png" alt=""  /></center>
+                    <center><img src="images/Input god 2.png" alt=""  /></center>
                     <br>
                     <br>
                     <center><h1>#Comment</h1></center> 
-                    <center><img src="images/comments.png" alt="" width="40%" /></center>
-                    <center><img src="images/Comment 2.png" alt="" width="40%" /></center>
+                    <center><img src="images/comments.png" alt=""  /></center>
+                    <center><img src="images/Comment 2.png" alt=""  /></center>
 
 
 
