--- a/Profile.html
+++ b/Profile.html
@@ -76,6 +76,9 @@
 								<a href="https://www.kmutnb.ac.th/">มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าพระนครเหนือวิทยาเขตปราจีนบุรี</a>
 								<br>
 								<br>
+								ที่อยู่: อนามัยงามเจริญ 12 เขตบางขุนเทียน แขวงท่าข้าม
+								<br>
+								<br>
 								<br>
 								<br>
 								<br>
